2008-01-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* ToStringReturnsNullRule.cs: Avoid creating MessageCollection 
	until/unless it's needed.

2007-11-23  Sebastien Pouliot  <sebastien@ximian.com> 

	* EqualShouldHandleNullArgRule.cs: Don't create a MessageCollection
	unless we return a message. Avoid NRE if Equals simply return a 
	boolean. Add FIXME to rework logic for MS compilers in debug mode.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 

	* CloneMethodShouldNotReturnNullRule.cs: Don't create a 
	MessageCollection unless we return a message. IL check logic is too
	simplistic, added a little more logic (but it's still needs to be 
	fixed) so the test run correctly under Windows (VS in Debug mode 
	really generates crap).
	* ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs: Avoid 
	creating MessageCollection unless needed.

2007-11-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* ToStringReturnsNullRule.cs: Fixed NullReferenceException when doesn't
	exist the key in the hash table.  Some internal refactoring (fix the
	selection for the ToString () method).

2007-10-24  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.BadPractice.xml.in: Put the version attribute with 
	autotools helpers. Added documentation for these rules.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* CloneMethodShouldNotReturnNullRule.cs: Fixed NullReferenceException
	when try to inspect a method without body.

2007-10-16  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* ToStringReturnsNullRule.cs: Fixed NullReferenceException when try
	to inspect a method without instructions.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* CloneMethodShouldNotReturnNullRule.cs: New rule (Nidhi Rawal, GSoC 
	2007)
	* EqualShouldHandleNullArgRule.cs: New rule (Nidhi Rawal, GSoC 2007)
	* ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs: New rule
	(Nidhi Rawal, GSoC 2007)
	* ToStringReturnsNullRule.cs: New rule (Nidhi Rawal, GSoC 2007)